--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Custom blocks for markdown-it",
   "version": "0.1.1",
   "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "yarn unit",
     "unit": "mocha --colors",
@@ -36,7 +37,8 @@
   "homepage": "https://github.com/posva/markdown-it-custom-block#readme",
   "license": "MIT",
   "devDependencies": {
-    "markdown-it": "^12.0.0",
+    "@types/markdown-it": "^10.0.3",
+    "markdown-it": "^12.0.2",
     "markdown-it-testgen": "^0.1.4",
     "mocha": "^7.0.0",
     "npm-watch": "^0.7.0"
