--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "markdown-it-custom-block",
   "description": "Custom blocks for markdown-it",
   "version": "0.1.2",
+  "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
-    "test": "yarn run unit",
-    "unit": "mocha --colors",
+    "test": "mocha --colors",
     "dev": "npm-watch"
   },
   "watch": {
@@ -25,7 +25,7 @@
     "markdown"
   ],
   "engines": {
-    "node": ">= 16.20.2"
+    "node": ">= 20.0.0"
   },
   "repository": {
     "type": "git",
@@ -40,7 +40,8 @@
     "@types/markdown-it": "^14.1.2",
     "markdown-it": "^14.1.0",
     "markdown-it-testgen": "^0.1.6",
-    "mocha": "^10.8.2",
-    "npm-watch": "^0.13.0"
+    "mocha": "^11.0.1",
+    "npm-watch": "^0.13.0",
+    "prettier": "^3.4.2"
   }
 }
