--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: lts/*
+          cache: pnpm
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn run test
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm test
