--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "markdown-it-custom-block",
   "description": "Custom blocks for markdown-it",
   "version": "0.1.2",
+  "packageManager": "pnpm@9.14.4",
   "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
